# claude_builder

./: .bandit  .codacy.yml  .coveragerc  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  .semgrep.yml  CHANGELOG.md  CONTRIBUTING.md  COVERAGE_SUMMARY.md  LICENSE  README.md  RELEASE.md  pyproject.toml  requirements.txt  test_failures_report.txt  test_file.txt
.github/: PULL_REQUEST_TEMPLATE.md  codeql-config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  template_contribution.yml
.github/workflows/: ci.yml  codacy-issues.yml  codeql.yml  dependabot.yml  publish.yml
cli/: __init__.py  config_commands.py  git_commands.py  template_commands.py
core/: __init__.py  agents.py  generator.py
scripts/: fix_coverage_paths.py  release_preflight.sh  test_ci_locally.sh  test_minimal.sh  update_domain_snapshots.py
src/claude_builder/: __init__.py
src/claude_builder/agents/: __init__.py  registry.py
src/claude_builder/analysis/: __init__.py  tool_recommendations.py
src/claude_builder/analysis/detectors/: __init__.py  base.py  infrastructure.py  mlops.py
src/claude_builder/cli/: __init__.py  agent_commands.py  analyze_commands.py  config_commands.py  error_handling.py  generate_commands.py  git_commands.py  health_commands.py  help_formatter.py  main.py  next_steps.py  progress_tools.py  suggestions.py  template_commands.py  ux.py
src/claude_builder/core/: __init__.py  agent_repository.py  agents.py  analyzer.py  async_analyzer.py  async_compatibility.py  async_generator.py  async_template_manager.py  config.py  generator.py  models.py  output_renderers.py  template_manager.py  template_manager_legacy.py  template_manager_v2.py
src/claude_builder/core/config_management/: __init__.py  config_environment.py  config_loader.py  config_validator.py
src/claude_builder/core/template_management/: __init__.py
src/claude_builder/models/: __init__.py  enums.py
src/claude_builder/templates/base/: agent_coordination.md  base.md  claude_instructions.md  development_workflow.md
src/claude_builder/templates/claude_docs/: base.md.template  python.md.template  rust.md.template
src/claude_builder/templates/domains/: _macros.md
src/claude_builder/templates/frameworks/: framework-fastapi.md
src/claude_builder/templates/languages/: language-python.md
src/claude_builder/templates/subagent_prompts/: backend_architect.md.template  base_agent.md.template  performance_optimizer.md.template  test_specialist.md.template
src/claude_builder/templates/user_guides/: base_guide.md.template  team_composition.md.template  usage_patterns.md.template
src/claude_builder/utils/: __init__.py  async_performance.py  cli_ui.py  exceptions.py  file_patterns.py  git.py  github_client.py  health.py  health_recommendations.py  secure_storage.py  security.py  validation.py
templates/base/: agent_coordination.md
templates/frameworks/axum/: claude_instructions.md
templates/frameworks/react/: claude_instructions.md  development_guide.md
templates/languages/javascript/: agents_config.md  claude_instructions.md  development_guide.md
templates/languages/python/: agents_config.md
templates/languages/rust/: agents_config.md  claude_instructions.md
tests/: __init__.py  conftest.py  pytest.ini
tests/fixtures/: __init__.py
tests/fixtures/sample_projects/: __init__.py
tests/fixtures/sample_projects/javascript_project/: package.json
tests/helpers/: __init__.py  health_registry.py
tests/integration/: __init__.py  test_agent_coordination.py  test_async_integration.py  test_cli_integration.py  test_cli_target_workflows.py  test_git_workflows.py  test_template_workflows.py
tests/performance/: test_agent_repository_performance.py  test_template_render_performance.py
tests/security/: test_security_validation.py
tests/unit/: __init__.py  test_agents_coverage.py  test_analyzer_coverage.py  test_cli_enhanced_ux.py  test_cli_main_coverage.py  test_config_coverage.py  test_exceptions_coverage.py  test_extra_generator_coverage.py  test_file_patterns_coverage.py  test_generator_coverage.py  test_init_modules_coverage.py  test_models_coverage.py  test_simple_config_coverage.py  test_validation_coverage.py
tests/unit/advanced/: test_agent_repository.py  test_config_management.py  test_git_integration.py  test_github_client.py  test_template_downloader.py  test_template_manager.py  test_template_repository.py  test_template_validator.py
tests/unit/agents/: test_mlops_registry.py
tests/unit/async/: __init__.py  test_async_compatibility.py  test_async_performance.py  test_async_template_downloader.py
tests/unit/cli/: test_agent_commands.py  test_agents_suggest_domain.py  test_analyze_commands.py  test_analyze_commands_p1_5.py  test_analyze_domain_filtering.py  test_config_commands.py  test_generate_commands.py  test_git_commands.py  test_health_cli_e2e.py  test_health_commands.py  test_template_commands.py
tests/unit/cli_comprehensive/: __init__.py  test_config_commands_comprehensive.py  test_generate_commands_comprehensive.py
tests/unit/core/: test_analyzer.py  test_analyzer_devops.py  test_config.py  test_devops_agent_registry.py  test_generator.py  test_models.py  test_output_renderers.py  test_template_manager_coordination.py
tests/unit/intelligence/: __init__.py  test_agents.py  test_project_detection.py  test_template_system.py
tests/unit/phase1_core/: __init__.py  test_analyzer.py  test_config.py  test_generator.py  test_models.py
tests/unit/phase2_intelligence/: __init__.py  test_agents.py  test_project_detection.py  test_template_system.py
tests/unit/phase3_advanced/: __init__.py  test_agent_repository.py  test_config_management.py  test_git_integration.py  test_template_manager.py
tests/unit/templates/: test_domain_templates.py  test_domain_templates_performance.py
tests/unit/utils/: __init__.py  test_exceptions.py  test_file_patterns.py  test_health.py  test_health_recommendations.py  test_mlops_patterns.py  test_validation.py
utils/: exceptions.py  validation.py
(+51 files in other folders)
